05-currency-conversion-microservice-basic/ingress_aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /currency-exchange/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: currency-exchange
            port:
              number: 8000
      - path: /currency-conversion/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: currency-conversion
            port:
              number: 8100
